# Multi-Universal-Approximator

./: .gitignore  .mua.code-workspace  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
notebooks/: clic.ipynb  fit.ipynb  gen.ipynb
notebooks/examples/generations/: generated.h5
src/Uuat/: utils.py
src/Uuat/losses/: mmd.py  mse.py
src/Uuat/plots/: fit.py  unitary.py
src/Uuat/scalers/: expectation.py
src/Uuat/train/: gen.py  regression.py
src/Uuat/unitaries/: Uuat.py  multiUuat.py
src/mua/: utils.py
src/mua/losses/: __init__.py  corr.py  mmd.py  mse.py
src/mua/plots/: fit.py  unitary.py
src/mua/train/: gen.py  regression.py
src/mua/unitaries/: Uuat.py
